--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backgrid-moment-cell",
   "version": "0.3.0",
-  "description": "Backgrid.js datetime cell type formatted via moment.js",
+  "description": "Backgrid.js datetime cell type formatted via moment.js.",
   "main": "backgrid-moment-cell.js",
   "scripts": {
     "test": "grunt jasmine"
