--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "backgrid-moment-cell.js",
     "backgrid-moment-cell.css"
   ],
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Backgrid.js datetime cell type formatted via moment.js.",
   "homepage": "https://github.com/wyuenho/backgrid-moment-cell",
   "authors": [
@@ -24,7 +24,7 @@
     "tests"
   ],
   "dependencies": {
-    "backgrid": "0.3.0-beta",
+    "backgrid": "~0.3.0",
     "moment": "~2.5.0",
     "underscore": "~1.5.2"
   }
