--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
+sudo: required
+dist: trusty
 language: node_js
 node_js:
-  - 0.10
+  - 4.1
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
