Upgrade deps and revive testing on Chrome in CI

--- a/package.json
+++ b/package.json
@@ -24,22 +24,22 @@
   },
   "devDependencies": {
     "backbone": "^1.2.3",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
+    "grunt": "^1.0.0",
+    "grunt-cli": "^1.0.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0",
     "grunt-jsduck": "^1.0.1",
-    "grunt-karma": "^0.12.1",
+    "grunt-karma": "^1.0.0",
     "grunt-recess": "^1.0.1",
-    "jasmine-core": "^2.4.1",
-    "jquery": "2.1.0",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-coverage": "^0.5.5",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.7",
-    "karma-jasmine-html-reporter": "^0.2.0",
-    "karma-safari-launcher": "^0.1.1"
+    "jasmine-core": "^2.4.0",
+    "jquery": "^2.1.0",
+    "karma": "^1.0.0",
+    "karma-chrome-launcher": "^1.0.0",
+    "karma-coverage": "^1.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.0",
+    "karma-jasmine-textio-html-reporter": "^1.0.0",
+    "karma-safari-launcher": "^1.0.0"
   },
   "dependencies": {
     "backgrid": "~0.3.7",
