--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backgrid-moment-cell",
+  "name": "@estateagents/backgrid-moment-cell",
   "version": "0.3.9",
   "description": "Backgrid.js datetime cell type formatted via moment.js.",
   "main": "backgrid-moment-cell.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/wyuenho/backgrid-moment-cell.git"
+    "url": "git@bitbucket.org:estateagents/backgrid-moment-cell.git"
   },
   "keywords": [
     "backbone",
