Assign copyright to Cloudflare

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "backgrid",
     "moment"
   ],
-  "author": "Jimmy Yuen Ho Wong <wyuenho@gmail.com>",
+  "author": "Cloudflare, Inc <jwong@cloudflare.com>",
   "license": "MIT",
   "readmeFilename": "README.md",
   "bugs": {
