--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "description": "Backgrid.js datetime cell type formatted via moment.js.",
   "homepage": "https://github.com/wyuenho/backgrid-moment-cell",
   "authors": [
-    "Jimmy Yuen Ho Wong <wyuenho@gmail.com>"
+    "Cloudflare, Inc <jwong@cloudflare.com>"
   ],
   "keywords": [
     "backbone",
