--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "grunt-cli": "^1.0.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0",
+    "grunt-csscomb": "^3.1.1",
+    "grunt-cssnano": "^2.1.0",
     "grunt-jsduck": "^1.0.1",
     "grunt-karma": "^1.0.0",
-    "grunt-recess": "^1.0.1",
     "jasmine-core": "^2.4.0",
     "jquery": "^2.1.0",
     "karma": "^1.0.0",
